# voxel-sandbox

./: CLAUDE.md  Cargo.toml  README.md  index.html
.github/workflows/: deploy.yml
src/: main.rs
src/block/: block_registry.rs  block_type.rs  mod.rs
src/chunk/: chunk_coord.rs  chunk_data.rs  chunk_manager.rs  mod.rs
src/inventory/: mod.rs
src/meshing/: mod.rs  simple_mesher.rs
src/persistence/: mod.rs
src/physics/: mod.rs
src/player/: camera.rs  collision.rs  interaction.rs  mod.rs  movement.rs
src/rendering/: mod.rs
src/terrain/: mod.rs  terrain_gen.rs
src/utils/: direction.rs
web/: index.html
