[package]
name = "voxel-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_text",
    "bevy_winit",
    "bevy_state",
    "bevy_picking",
    "png",
    "webgl2",
    "x11",
] }
noise = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.release.package."*"]
opt-level = "s"
